integrate testnet contracts

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_ENV=
-NEXT_PUBLIC_DEMO=
+NEXT_PUBLIC_DEMO=true
 
-NEXT_PUBLIC_API_BASE_URL=
-BSC_TESTNET_RPC_URL=
+NEXT_PUBLIC_API_BASE_URL=https://api-dao.in8.com
+BSC_TESTNET_RPC_URL=http://data-seed-prebsc-1-s2.binance.org:8545/
 
-NEXT_PUBLIC_MAINNET_NFT_ADDRESS=
-NEXT_PUBLIC_TESTNET_NFT_ADDRESS=
-
-
-
+NEXT_PUBLIC_MAINNET_PAYMENTS_ADDRESS=0x8e793ed72A5887857ECC02931b187141af614d27
+NEXT_PUBLIC_TESTNET_PAYMENTS_ADDRESS=0x8e793ed72A5887857ECC02931b187141af614d27
