--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run build && npm run pages:build && wrangler pages dev .vercel/output/static",
-    "deploy": "npm run build && npm run pages:build && wrangler pages deploy .vercel/output/static",
+    "preview": "wrangler pages dev .vercel/output/static",
+    "deploy": "wrangler pages deploy .vercel/output/static",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
     "prebuild": "node scripts/generate-robots-txt.js",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\" && eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
@@ -85,6 +85,6 @@
     "typescript": "^5",
     "typescript-eslint": "^8.6.0",
     "vercel": "^37.2.1",
-    "wrangler": "^3.72.3"
+    "wrangler": "^4.20.0"
   }
 }
