--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,8 +2,10 @@ name = "dao-dashboard"
 compatibility_date = "2024-07-29"
 
 [build]
-command = "npm run build"
-pages_build_output_dir = ".vercel/output/static"
+command = "npm run build && npm run pages:build"
+
+[site]
+bucket = ".vercel/output/static"
 
 [vars]
 # This section is intentionally left empty
