--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,6 @@
-name = "dao-dashboard"
+name = "payments-dapp"
 compatibility_date = "2024-07-29"
 
-[build]
-command = "npm run build && npm run pages:build"
-
-[site]
-bucket = ".vercel/output/static"
 
 [vars]
 # This section is intentionally left empty
