--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,4 +3,5 @@ compatibility_date = "2024-07-29"
 
 
 [vars]
-# This section is intentionally left empty
+# NEXT_PUBLIC_BSC_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
+NEXT_PUBLIC_BSC_TESTNET_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
