adding project id to this

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,4 @@ pages_build_output_dir = ".vercel/output/static"
 [vars]
 # NEXT_PUBLIC_BSC_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
 NEXT_PUBLIC_BSC_TESTNET_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID = "e04f36dc35891ebf9026040391894382"
