--- a/.prettierrc
+++ b/.prettierrc
@@ -2,10 +2,11 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "printWidth": 80,
   "tabWidth": 2,
-  "endOfLine": "auto"
-}
+  "useTabs": false,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "jsxSingleQuote": true,
+  "bracketSameLine": false
+} 
