--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,3 +8,4 @@ pages_build_output_dir = ".vercel/output/static"
 [vars]
 # NEXT_PUBLIC_BSC_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
 NEXT_PUBLIC_BSC_TESTNET_PAYMENTS_ADDRESS = "0xaE5d3395eB2f06BFc4e283E69d9166c71043F6Ea"
+NEXT_PUBLIC_CITRON_LOANS_ADDRESS = "0x8e2558202FBc313a5d4F597d39a4f8892905f297"
